@@ -3,9 +3,9 @@
          'testport' => '',
          'testpassword' => '',
          'testhost' => '',
-         'testuser' => '',
+         'testuser' => 'test',
          'testdb' => 'test',
-         'testdriver' => ''
+         'testdriver' => 'mysql'
        };
   sub load_all { return (
       driver   => $opt->{'testdriver'},
